Fixed button ID names

--- a/courses.html
+++ b/courses.html
@@ -61,10 +61,10 @@
                     <button class="btn btn-outline-secondary" type="button" id="teacherFilter">
                         Teacher
                     </button>
-                    <button class="btn btn-outline-secondary" type="button" id="teacherFilter">
+                    <button class="btn btn-outline-secondary" type="button" id="subjectAreaFilter">
                         Subject Area
                     </button>
-                    <button class="btn btn-outline-secondary" type="button" id="teacherFilter">
+                    <button class="btn btn-outline-secondary" type="button" id="creditsFilter">
                         Credits
                     </button>
                 </div>
