Added a basic js file for courses.html sort function

--- a/courses.html
+++ b/courses.html
@@ -58,17 +58,17 @@
             <div class="container">
                 <div class="courseSort-dropdown">
                     <label class="text-dark" for="sortBy">Sort by:</label>
-                    <button class="btn btn-outline-secondary" type="button" id="teacherFilter">
+                    <button onclick=printSomething() class="btn btn-outline-secondary" type="button" id="teacherFilter">
                         Teacher
                     </button>
-                    <button class="btn btn-outline-secondary" type="button" id="subjectAreaFilter">
+                    <button onclick=printSomething() class="btn btn-outline-secondary" type="button" id="subjectAreaFilter">
                         Subject Area
                     </button>
-                    <button class="btn btn-outline-secondary" type="button" id="creditsFilter">
+                    <button onclick=printSomething() class="btn btn-outline-secondary" type="button" id="creditsFilter">
                         Credits
                     </button>
                 </div>
-                <div class="courseList-div"></div>
+                <div id="courseList-div">Courses List</div>
             </div>
         </section>
         
