--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,7 @@
                             <a href="student.html" class="nav-link">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#teacher.html" class="nav-link">Teachers</a>
+                            <a href="teacher.html" class="nav-link">Teachers</a>
                         </li>
                         <li class="nav-item">
                             <a href="about.html" class="nav-link">About</a>
