--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <div class="" id="navmenu">
                     <ul class="">
                         <li class="nav-item">
-                            <a href="#index" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#student" class="nav-link">Students</a>
+                            <a href="student.html" class="nav-link">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#teacher" class="nav-link">Teachers</a>
+                            <a href="teacher.html" class="nav-link">Teachers</a>
                         </li>
                         <li class="nav-item">
                             <a href="about.html" class="nav-link">About</a>
