--- a/student.html
+++ b/student.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intital-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="JavaScript.js"></script>
-        <title>Baja Blast - Student Page</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intital-scale=1.0">
+    <link rel="stylesheet" href="bajablast.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="JavaScript.js"></script>
+    <title>Baja Blast - Student Page</title>
+    <style>
+        img {
+            border: 5px solid #555;
+        }
+    </style>
+</head>
     <body>
+        <div id="wrapper">
+            <header>
+                <h1 style="font-family:cursive;">Baja Blast: Student Page</h1>
+            </header>
+            <!--Navbar-->
+            <nav class="navbar">
+                <div class="container">
 
-        <!--Navbar-->
-        <nav class="navbar">
-            <div class="container">
-                <a href="index.html" class="navbar-project-name">Baja Blast Project</a>
+                    <img class="image" src="img/student.png" alt="Student Image" style="padding:20px;width:100%;height:300px;">
 
+                    <nav>
+                        <b>
+                            <a href="index.html">Home</a>
+                            <a href="about.html">About</a>
+                            <a href="student.html">Student</a>
+                            <a href="teacher.html">Teacher</a>
+                        </b>
+                    </nav>
 
-                <div class="" id="navmenu">
-                    <ul class="">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="student.html" class="nav-link">Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="teacher.html" class="nav-link">Teachers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
-                        </li>
-                        
-                    </ul>
                 </div>
+
+            </nav>
+            <div id="studentHero">
+
             </div>
 
-        </nav>
+            <!--Login Section-->
+            <section class="">
+                <div class="container">
+                    <h3>Login Here</h3>
 
-        <!--Login Section-->
-        <section class="">
-            <div class="container">
-                <h3>Login Here</h3>
-
-                <div class="input-group news-input">
-                    <input 
-                        type="text"
-                        class="form-control"
-                        placeholder="Enter Email"
-                    />
-                    <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Enter Password"
-                    />
-                    <button
-                        class="btn btn-dark btn-lg"
-                        type="button"
-                    >
-                    Login
-                    </button>
+                    <div class="input-group news-input">
+                        <input type="text"
+                               class="form-control"
+                               placeholder="Enter Email" />
+                        <input type="text"
+                               class="form-control"
+                               placeholder="Enter Password" />
+                        <button class="btn btn-dark btn-lg"
+                                type="button">
+                            Login
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
 
+            <footer>
+                <br>
+                <i>Copyright &copy; 2024 Baja Blast Project</i> <br>
+                </a>
+            </footer>
 
-    </body>
+</body>
 </html>
