--- a/about.html
+++ b/about.html
@@ -24,8 +24,6 @@
             <nav class="navbar">
                 <div class="container">
 
-
-                    <img class="image" src="img/about.png" alt="About Image" style="padding:20px;width:100%;height:300px;">
                     <nav>
                         <b>
                             <a href="index.html">Home</a>
@@ -34,6 +32,9 @@
                             <a href="teacher.html">Teacher</a>
                         </b>
                     </nav>
+
+                    <img class="image" src="img/about.png" alt="About Image" style="padding:20px;width:100%;height:300px;">
+                    
                 </div>
             </nav>
              <!--About Us Description-->
@@ -44,22 +45,26 @@
                         <section>
                             <h3>Skylar</h3>
                             <p>
-                                bla bla
+                                Webpage Developer
                             </p>
                         </section>
                         <section>
                             <h3>Lorena</h3>
-                            <p>bla bla</p>
+                            <p>
+                                Graphic Designer
+                            </p>
                         </section>
                         <section>
                             <h3>Liza</h3>
                             <p>
-                                bla bla
+                                Graphic Designer
                             </p>
                         </section>
                         <section>
                             <h3>Daniel</h3>
-                            <p>bla bla</p>
+                            <p>
+                                Database Manager
+                            </p>
                         </section>
                     </div>
                         
